# django-api-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/api/: urls.py
{{cookiecutter.project_slug}}/api/common/: models_mixins.py
{{cookiecutter.project_slug}}/api/config/: application.py  rest.py  settings.py
{{cookiecutter.project_slug}}/api/config/__app_template__/: models.py-tpl  serializers.py-tpl  views.py-tpl
{{cookiecutter.project_slug}}/api/config/__app_template__/tests/: factories.py-tpl  test_models.py-tpl  test_serializers.py-tpl  test_views.py-tpl
{{cookiecutter.project_slug}}/api/user/: models.py  views.py
{{cookiecutter.project_slug}}/api/user/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/api/user/tests/: test_models.py
